[gd_scene load_steps=7 format=3 uid="uid://dkvr50ujxtkmu"]

[ext_resource type="Texture2D" uid="uid://d38ceuoo614k4" path="res://assets/flappy/bg.png" id="1_1bvp3"]
[ext_resource type="Script" uid="uid://cvvkq6be0ousl" path="res://main.gd" id="1_lquwl"]
[ext_resource type="PackedScene" uid="uid://dfhe8bff47flu" path="res://scenes/pipe.tscn" id="2_7mycd"]
[ext_resource type="PackedScene" uid="uid://bp3lx06oj0xlc" path="res://scenes/ground.tscn" id="2_lquwl"]
[ext_resource type="PackedScene" uid="uid://bx45iyjrci2g3" path="res://scenes/burger.tscn" id="3_7mycd"]
[ext_resource type="PackedScene" uid="uid://due0axq0tb3ox" path="res://scenes/game_over.tscn" id="4_272bh"]

[node name="Main" type="Node2D"]
script = ExtResource("1_lquwl")
pipe_scene = ExtResource("2_7mycd")

[node name="Background" type="Sprite2D" parent="."]
texture = ExtResource("1_1bvp3")
offset = Vector2(432, 384)

[node name="Ground" parent="." instance=ExtResource("2_lquwl")]
z_index = 3
script = null

[node name="Burger" parent="." instance=ExtResource("3_7mycd")]

[node name="PipeTimer" type="Timer" parent="."]
wait_time = 1.5

[node name="ScoreLabel" type="Label" parent="."]
z_index = 8
offset_left = 357.0
offset_top = 2.0
offset_right = 528.0
offset_bottom = 57.0
theme_override_font_sizes/font_size = 40
text = "SCORE: 0"

[node name="GameOver" parent="." instance=ExtResource("4_272bh")]

[connection signal="body_entered" from="Ground" to="." method="_on_ground_body_entered"]
[connection signal="timeout" from="PipeTimer" to="." method="_on_pipe_timer_timeout"]
[connection signal="restart" from="GameOver" to="." method="_on_game_over_restart"]
